Release 1.14

#79 Simplified API to start request processor builders
#80 ILinkRestService and related builders API refactoring for consistency
#81 LinkRestRuntime should implement JAX RS Feature
#82 LinkRestBuilder: a static shortcut for simple LinkRest stack
#83 Start deploying releases to Maven central
#84 Problems with entity attributes of type java.sql.Time
#87 Upgrade to release version of Cayenne
#88 Error when using 'cayenneExp' with outer joins ending in relationship

Release 1.13

#73 cayenneExp with paths containing plus signs (outer joins) are reportedly broken in 1.12

Release 1.12 2015-01-22

#63 Object matching with explicit ID fails when callers do not use correct ID type
#67 Support for per-entity non-persistent properties
#68 Rename Entity to ResourceEntity
#69 Own metadata layer
#70 Added JSON converters for java.sql date/time types
#71 POJOs should be modeled as LrEntities, not ObjEntities
#72 Refactor TreeConstraints into visitor-based ConstraintsBuilder

Release 1.11 2015-01-20

#24 Sencha fake ids and Longs
#66 LinkRestExceptionMapper should log exception stack traces at DEBUG level

Release 1.10 2014-12-08

#55 Object matching fails when callers do not use correct implicit ID type 
#57 Support for Long IDs in updates
#60 Ignore 'query' parameter when no property to match is specified
#61 Upgrade to to Cayenne 4.0.M2.1ab1caa

Release 1.9 2014-11-24

#52 Removing hard size limit for 'cayenneExp'
#56 Upgrade to to Cayenne 4.0.M2.fba700d

Release 1.8 2014-10-14

#43 upgrade to Jersey 2.12, jackson 2.4.2
#46 Sencha: update objects order is important on bulk updates
#47 support for Filter operator option
#48 Support for implicit propagated ids on create/update
#49 IRelationshipMapper should use relationship name by default

Release 1.7 2014-09-05

#29 Batch lookup of relationship objects.
#38 'idempotentFullSync' method to synchronize collections
#40 Optionally suppress entity bodies on update requests