@@ -38,7 +38,7 @@ public class GET_CayenneExpIT extends JerseyTestOnDerby {
 		assertEquals(Status.OK.getStatusCode(), r1.getStatus());
 		assertEquals("{\"success\":true,\"data\":[{\"id\":2}],\"total\":1}", r1.readEntity(String.class));
 	}
-	
+
 	@Test
 	public void test_CayenneExp_Map_Params() throws WebApplicationException, IOException {
 
@@ -47,6 +47,45 @@ public class GET_CayenneExpIT extends JerseyTestOnDerby {
 
 		Response r1 = target("/e2").queryParam("include", "id")
 				.queryParam("cayenneExp", urlEnc("{\"exp\":\"name = $n\",\"params\":{\"n\":\"xxx\"}}")).request().get();
+
+		assertEquals(Status.OK.getStatusCode(), r1.getStatus());
+		assertEquals("{\"success\":true,\"data\":[{\"id\":1}],\"total\":1}", r1.readEntity(String.class));
+	}
+
+	@Test
+	public void test_CayenneExp_Bare() throws WebApplicationException, IOException {
+
+		runtime.newContext().performGenericQuery(
+				new SQLTemplate(E2.class, "INSERT INTO utest.e2 (id, name) values (1, 'xxx'),(2, 'yyy'),(3, 'zzz')"));
+
+		Response r1 = target("/e2").queryParam("include", "id").queryParam("cayenneExp", urlEnc("name = 'yyy'"))
+				.request().get();
+
+		assertEquals(Status.OK.getStatusCode(), r1.getStatus());
+		assertEquals("{\"success\":true,\"data\":[{\"id\":2}],\"total\":1}", r1.readEntity(String.class));
+	}
+
+	@Test
+	public void test_CayenneExp_List() throws WebApplicationException, IOException {
+
+		runtime.newContext().performGenericQuery(
+				new SQLTemplate(E2.class, "INSERT INTO utest.e2 (id, name) values (1, 'xxx'),(2, 'yyy'),(3, 'zzz')"));
+
+		Response r1 = target("/e2").queryParam("include", "id").queryParam("cayenneExp", urlEnc("[\"name = 'yyy'\"]"))
+				.request().get();
+
+		assertEquals(Status.OK.getStatusCode(), r1.getStatus());
+		assertEquals("{\"success\":true,\"data\":[{\"id\":2}],\"total\":1}", r1.readEntity(String.class));
+	}
+
+	@Test
+	public void test_CayenneExp_List_Params() throws WebApplicationException, IOException {
+
+		runtime.newContext().performGenericQuery(
+				new SQLTemplate(E2.class, "INSERT INTO utest.e2 (id, name) values (1, 'xxx'),(2, 'yyy'),(3, 'zzz')"));
+
+		Response r1 = target("/e2").queryParam("include", "id")
+				.queryParam("cayenneExp", urlEnc("[\"name = $b\", \"xxx\"]")).request().get();
 
 		assertEquals(Status.OK.getStatusCode(), r1.getStatus());
 		assertEquals("{\"success\":true,\"data\":[{\"id\":1}],\"total\":1}", r1.readEntity(String.class));
